--- a/R-package/DESCRIPTION
+++ b/R-package/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: xgboost
-Type: Package
-Title: Extreme Gradient Boosting
 Version: 0.4-2
 Date: 2015-08-01
 Author: Tianqi Chen <tianqi.tchen@gmail.com>, Tong He <hetong007@gmail.com>, Michael Benesty <michael@benesty.fr>
-Maintainer: Tong He <hetong007@gmail.com>
-Description: Extreme Gradient Boosting, which is an 
-    efficient implementation of gradient boosting framework. 
-    This package is its R interface. The package includes efficient 
+Title: eXtreme Gradient Boosting
+Version: 0.3-4
+Date: 2014-12-28
+Description: Xgboost is short for eXtreme Gradient Boosting, which is an 
+    efficient and scalable implementation of the gradient boosting framework. 
+    This package is an R wrapper of xgboost. The package includes an efficient 
     linear model solver and tree learning algorithms. The package can automatically 
     do parallel computation on a single machine which could be more than 10 times faster
     than existing gradient boosting packages. It supports various
@@ -28,8 +28,14 @@ Suggests:
 Depends:
     R (>= 2.10)
 Imports:
+    Ckmeans.1d.dp (>= 3.3.1),
+    DiagrammeR (>= 0.4),
+    data.table (>= 1.9.4),
+    ggplot2 (>= 1.0.0),
     Matrix (>= 1.1-0),
     methods,
-    data.table (>= 1.9.4),
     magrittr (>= 1.5),
-    stringr (>= 0.6.2)
+    vcd (>= 1.3)
+Suggests:
+    testthat,
+    testthatsomemore
