--- a/R-package/DESCRIPTION
+++ b/R-package/DESCRIPTION
@@ -2,6 +2,7 @@ Package: xgboost
 Version: 0.4-2
 Date: 2015-08-01
 Author: Tianqi Chen <tianqi.tchen@gmail.com>, Tong He <hetong007@gmail.com>, Michael Benesty <michael@benesty.fr>
+Maintainer: Tong He <hetong007@gmail.com>
 Title: eXtreme Gradient Boosting
 Version: 0.3-4
 Date: 2014-12-28
@@ -28,14 +29,8 @@ Suggests:
 Depends:
     R (>= 2.10)
 Imports:
-    Ckmeans.1d.dp (>= 3.3.1),
-    DiagrammeR (>= 0.4),
-    data.table (>= 1.9.4),
-    ggplot2 (>= 1.0.0),
     Matrix (>= 1.1-0),
     methods,
+    data.table (>= 1.9.4),
     magrittr (>= 1.5),
-    vcd (>= 1.3)
-Suggests:
-    testthat,
-    testthatsomemore
+    stringr (>= 0.6.2)
